<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#171717"
    tools:context=".percGord">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="40dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCinturaPG">

        <RadioButton
            android:id="@+id/radioButtonHomem"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:button="@drawable/custom_radiobutton"
            android:checked="true"
            android:text="@string/tmb_Homem"
            android:textColor="#AAB6BD"
            android:textColorHint="#AAB6BD" />

        <RadioButton
            android:id="@+id/radioButtonMulher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/custom_radiobutton"
            android:checked="false"
            android:text="@string/tmb_Mulher"
            android:textColor="#AAB6BD" />
    </RadioGroup>

    <TextView
        android:id="@+id/textResultadoPG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="28dp"
        android:textColor="#AAB6BD"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/editQuadrilPG" />

    <Button
        android:id="@+id/button_tmb2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="#266E83"
        android:onClick="calcular_PG"
        android:text="@string/calcular_PG"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="28dp"
        android:text="@string/resultado_PG"
        android:textColor="#AAB6BD"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editQuadrilPG" />

    <EditText
        android:id="@+id/editQuadrilPG"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/quadril_PG"
        android:inputType="number|numberDecimal"
        android:textColor="#266E83"
        android:textColorHint="#266E83"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPescocoPG" />

    <EditText
        android:id="@+id/editCinturaPG"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/cintura_PG"
        android:inputType="number|numberDecimal"
        android:textColor="#266E83"
        android:textColorHint="#266E83"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAlturaPG" />

    <EditText
        android:id="@+id/editPescocoPG"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/pescoco_PG"
        android:inputType="number|numberDecimal"
        android:textColor="#266E83"
        android:textColorHint="#266E83"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNomePG" />

    <EditText
        android:id="@+id/editAlturaPG"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:hint="@string/altura_PG"
        android:inputType="number|numberDecimal"
        android:textColor="#266E83"
        android:textColorHint="#266E83"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <EditText
        android:id="@+id/editNomePG"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/nome_PG"
        android:inputType="text"
        android:textColor="#266E83"
        android:textColorHint="#266E83"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="Natty Fit"
        android:textColor="#AAB6BD"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:text="@string/titulo_percGordura"
        android:textColor="#AAB6BD"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#88A2A3"
        android:onClick="verificarDados"
        android:text="@string/button_PG"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>