<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nomeo_LI"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/nomeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nomeUsuario_LI"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/altura_LI"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/alturaTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0.0"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pescoco_LI"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/pescocoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0.0"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cintura_LI"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/cinturaTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0.0"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quadril_LI"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/quadrilTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0.0"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sexo_LI"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/sexoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Masculino/Feminino"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resultado_LI"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/resultadoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0.0%"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>
